--- a/stylePage.css
+++ b/stylePage.css
@@ -12,6 +12,12 @@ body {
     top: 25%;
     z-index: -1;
   }
+  h1{
+    left: 50%;
+    right: auto;
+    font-size: 30px;
+    position: fixed;
+  }
   .box{
     background-color:black;
     padding-bottom: 20px;
@@ -22,6 +28,15 @@ body {
     background-color: #EDF5E1;
     margin-left: auto;
     margin-right: auto;
+  }
+  .submit{
+    position: absolute;
+    margin-top: 1%;
+    left: 50%;
+    height: auto;
+    width: auto;
+    font-size: 50px;
+    color: #05386B;
   }
   #answers{
     top: 55%
@@ -35,7 +50,7 @@ body {
     margin: 0 auto;
     padding: 20px;
     margin-left: 50%;
-    margin-top: 12%;
+    margin-top: 16%;
   }
   .file-upload2 {
     background-color: #EDF5E1;
@@ -43,7 +58,7 @@ body {
     margin: 0 auto;
     padding: 20px;
     margin-left: 50%;
-    margin-top: 1%;
+    margin-top: 2%;
   }
   
   .file-upload-btn {
